# mongo-fastapi-docker-poetry

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  gunicorn_conf.py  main.py  pyproject.toml  readme.md
app/: conftest.py  gunicorn_conf.py  main.py  static_values.py
app/routers/auth/: auth.py  models.py
app/routers/todos/: todos.py
app/utilities/: db.py  logger.py
etc/ssl/certs/: nginx.conf
