[tool.poetry]
name = "fastapi+mongo"
version = "0.1.0"
description = ""
authors = ["ne_srv <ne_srv@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.10"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
python-dotenv = "^1.0.1"
pydantic-settings = "^2.8.1"
motor = "^3.7.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.9"
black = "^25.1.0"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
